# KDBoatDemo

./: .codespellrc  .gitignore  .krazy  .travis.yml  CMakeLists.txt  README.md  REUSE.toml  appveyor.yml  calib-start.sh  data.qrc  images.qrc  imagesMaps.qrc  imagesMaps2.qrc  main.cpp  musicmodel.cpp  musicmodel.h  windowcontroller.cpp  windowcontroller.h
.github/workflows/: build.yml
.reuse/: dep5
resources/: AboutItem.qml  AppMenu.qml  AppPage.qml  Background.qml  BoatSailingContents.qml  BoatSailingContentsSmall.qml  BoatStatusContents.qml  BoatStatusContentsSmall.qml  Clino.qml  Compass.qml  Icon.qml  Main.qml  Map.qml  Maparea.qml  Mask.qml  PageNavigation.qml  PlayData.qml  PlayItem.qml  Radio.qml  Speeds.qml  Textgauge.qml  TextgaugeSmall.qml  Wind.qml
resources/images/: desenho-2.ktx
resources/images/maps/: shot18.ktx  shot19.ktx  shot20.ktx  shot21.ktx  shot22.ktx
